- updated readme file - added documentation folder containing installation instructions